fix display issue on mobile firefox

--- a/css/struct.css
+++ b/css/struct.css
@@ -48,7 +48,8 @@ pre, code {
 }
 
 #scroller {
-  max-width: 680px;
+  width: 680px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
